<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                tools:context=".LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:id="@+id/fields"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
        <LinearLayout
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="25"
                android:id="@+id/username_label"
                android:text="@string/username_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_weight="75"
                android:id="@+id/username_input_hint"
                android:layout_toRightOf="@+id/username_label"
                android:hint="@string/username_input_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/username_field"
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="25"
                android:id="@+id/password_label"
                android:text="@string/password_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_weight="75"
                android:id="@+id/password_input_hint"
                android:layout_toRightOf="@+id/password_label"
                android:hint="@string/password_input_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/password_field"
            android:id="@+id/confirm_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="25"
                android:id="@+id/confirm_label"
                android:text="@string/confirm_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_weight="75"
                android:id="@+id/confirm_input_hint"
                android:layout_toRightOf="@+id/confirm_label"
                android:hint="@string/confirm_input_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:layout_below="@+id/fields"
        android:layout_alignRight="@+id/fields"
        android:id="@+id/submit_Button"
        android:text="@string/submit"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
